# Sunoku

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src_c/: makefile  prog.c  prog_orig.c
test_boards/: b1.txt  b2.txt  b3_25x25.txt  b4_16x16_hard.txt  b4_16x16_partial.txt  b4_16x16_unsolvable.txt  b5_16x16_easy.txt  b6_16x16_medium.txt
